@startuml

title __GEOGRAPHICALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geographicalOperators {
      abstract class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.GeographicalOperator {
          # GeographicalOperator()
          {static} # formOperatorExpressionForMultiPointGeometry()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.MongoDBGeographicalOperatorFactory {
          {static} + isOperatorGeoNearestNeighbor()
          + newOperatorGeoNearestNeighbors()
          + newOperatorInGeoCircle()
          + newOperatorInGeoPolygon()
          + newOperatorInGeoRectangle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorGeoNearestNeighbors {
          - neighbors : int
          + getOperatorExpression()
          {static} + newOperatorGeoNearestNeighbors()
          - OperatorGeoNearestNeighbors()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorInGeoCircle {
          + getOperatorExpression()
          {static} + newOperatorInGeoCircle()
          - OperatorInGeoCircle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorInGeoPolygon {
          + getOperatorExpression()
          {static} + newOperatorInGeoPolygon()
          - OperatorInGeoPolygon()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorInGeoRectangle {
          + getOperatorExpression()
          {static} + newOperatorInGeoRectangle()
          - OperatorInGeoRectangle()
      }
    }
  }
  

  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.GeographicalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.MongoDBGeographicalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.BaseGeographicalOperatorFactory
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorGeoNearestNeighbors -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorInGeoCircle -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorInGeoPolygon -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.OperatorInGeoRectangle -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geographicalOperators.GeographicalOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
